# thalas

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: unit-tests.yaml
src/thalas/: __init__.py  utils.py
src/thalas/execution/: executor.py  executor_step_status.py
src/thalas/utilities/: executor_utils.py  fsspec_utils.py  json_encoder.py  ray_utils.py
tests/: __init__.py  test_executor.py  test_executor_utils.py
