[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
requires-python = ">=3.11"

[project]
name = "thalas"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.10"
dependencies = [
    "deepdiff",
    "draccus>=0.11.5",
    "fsspec",
    "jax",
    "ray==2.45",
    "toml",
]

[dependency-groups]

test = [
    "pytest>=8.3.2",
    "pytest-cov",
]
lint = [
    "ruff>=0.5.7",
    "black>=24.8.0",
    "pre-commit==4.2",
    "mypy>=1.4.1",
]

dev = [
    {include-group="test"},
    {include-group="lint"},
]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "NPY", "RUF", "UP", "W"]
ignore = ["F722", "B008", "UP015", "A005", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"

[tool.uv_build]
package-dir = "src"
